collapse bar , resolve routes

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -1,3 +1,9 @@
+html, body {
+  padding: 0;
+  margin: 0;
+}
+
+
 .margin_top {
     margin: 100px auto;
 }
@@ -62,7 +68,7 @@ hr.style-two {
 }
 
 #map {
-        height: 200px;
+        height: 18em;
         width: 100%;
 }
 
@@ -75,6 +81,8 @@ hr.style-two {
 #mapbox {
     margin-top: 10px;
 }
-      
+.panel-body {
+    padding: 0%;
+}
       
       
